# cuda-learning

./: .gitignore
lesson-2/: test  test.cu
lesson-2.3/: ex1  ex1.cu  ex2  ex2.cu
lesson-2.6/: ex1  ex1.cu  ex1_compute120  ex1_compute121  ex1_compute75  ex1_compute80  ex1_compute86  ex1_fat
lesson-3.1/: matrixSum1D_GPU  matrixSum1D_GPU.cu  matrixSum1D_GPU_if_device  matrixSum1D_GPU_if_device.cu  setDevice  setDevice.cu
lesson-3.2/: errorCheckFunction  errorCheckFunction.cu  errorCheckKernel  errorCheckKernel.cu
lesson-3.3/: eventRecordTime  eventRecordTime.cu  nvprofAnalysis  nvprofAnalysis.cu  report1.nsys-rep  report2.nsys-rep  report2.sqlite
lesson-3.4/: coresCount  coresCount.cu  query  query.cu
lesson-3.5/: grid1D_block1D  grid1D_block1D.cu  grid2D_block1D  grid2D_block1D.cu  grid2D_block2D  grid2D_block2D.cu
lesson-4.3/: registerNum  registerNum.cu
lesson-4.4/: CMakeLists.txt  common.cuh  global_memory.cu
lesson-4.5/: CMakeLists.txt  dynamic_shared_memory.cu  static_shared_memory.cu
lesson-4.6/: CMakeLists.txt  constant_memory.cu
lesson-4.7/: CMakeLists.txt  GPU_cache.cu
tools/: common.cuh
